--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title> Weather Widget</title>
+    </head>
+    <body>
+        <header>
+            <h1>Current Weather Conditions</h1>
+        </header>
+    
+    <main>
+        <section id="weather">
+        </section>
+        <form>
+            <input id="weather-search" type="text">
+            <label for="weather-search">
+                Enter the location
+            </label>
+            <button type="submit"> Search Location</button>
+        </form>
+    </main>
+    <script src ="index.js"></script>
+    </body>
+</html>
